--- a/css/style.css
+++ b/css/style.css
@@ -97,9 +97,10 @@ h1, h2, h3, h4, h5, h6{
 
 .image-bg{
 
-    background-image:linear-gradient(0deg, rgba(166,166,166,0) 0%, rgba(237, 237, 237,1) 100%), url(/media/header_bg.jpg);
-    background-position: center;
-    position: center;
+    background-image:linear-gradient(rgba( 255, 255, 255, 1), rgba(255, 255, 255, 0)), url(/media/header_bg.jpg);
+    background-position: bottom, center;
+    background-size:cover;
+    background-repeat: no-repeat;
 
 }
 
